--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HTML to PHP Link</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Netlify HTML and JS</title>
 </head>
 <body>
-    <a href="index.php?name=Shravit">Greet Me</a>
+    <h1>Welcome to Netlify with HTML and JavaScript</h1>
+    <button onclick="greetUser()">Greet</button>
+    
+    <!-- Link to JavaScript file -->
+    <script src="script.js"></script>
 </body>
 </html>
